MailZu-ng 0.12.mailzu-ng-da-php82-4882420+1 (22.07.2023)
---------
  - Fixed issues related to the PHP 8.2 upgrade with respect to in_array.
  - Fixed issues with referencing unset configuration values (accessing an unset array element).
  - Fixed the TIMESTAMP issue in the DA List code.
  - Fixed an upgrade issue to do with calling non-static method print_login_msg using the '::' syntax.
    This is no longer supported on PHP 8.0.
  - Removed the support for the user's "Local" field in the database which is deprecated within Amavis.
  - Corrected documentation.
  - Fixed an issue with the naming of the days.
  - Fixed issues with display sizes for administrators.

MailZu-ng 0.12.mailzu-ng-da-php72-10c2b76+1 (27.12.2022)
---------
  - Fixed a bug to do with disabled "form" items which caused a system error when processing DA
    list entries with errors.
  - Updated the RFC822 AllowComments option. This option is now by default disabled.

MailZu-ng 0.12.mailzu-ng-da-php72-00a08b4+1 (19.12.2022)
---------
  - Cleaned up the changes to the RFC822 code. Gone back to just making the minimum modifications
    to the original code and adding the extra functions for MailZu in a seperate library file. The
    RFC822 options can now also be defined in the config file. Two more variables have been added,
    namely $conf['da']['rfc822AllowComments'] and $conf['da']['public_internet'].

MailZu-ng 0.12.mailzu-ng-da-php72-3ce1595+1 (19.12.2022)
---------
  - Fixed the query which finds the unreviewed email messages in quarantine. The obvious effect was
    that deleted messages to still be reported on subsequent days. This has now been fixed. The
    script now just shows messages which have not been reviewed or which are pending administrator
    approval prior to being released.
  - Fixed some message wording in the reporting script.

MailZu-ng 0.12.mailzu-ng-da-php72-d7c6328+1 (14.12.2022)
---------
  - Updated documentation.
