@@ -835,7 +835,7 @@ class Mail_mimeDecode extends PEAR
 
         // Replace encoded characters
 		 
-        $cb = create_function('$matches',  ' return chr(hexdec($matches[0]));');
+        $cb = function($matches) { return chr(hexdec($matches[0])); };
          
         $input = preg_replace_callback( '/=([a-f0-9]{2})/i', $cb, $input);
 
